 Bug 384003 -  XPathEvaluator does not accept a Node as NSResolver, r=sicking, sr=peterv